--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   pinput: ^5.0.1
+  shared_preferences: ^2.5.3
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
