--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   geocoding: ^4.0.0
   geolocator: ^14.0.2
+  flutter_map: ^8.2.1
 
 dev_dependencies:
   flutter_test:
