--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geocoding: ^4.0.0
   geolocator: ^14.0.2
   flutter_map: ^8.2.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
