--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geolocator: ^14.0.2
   flutter_map: ^8.2.1
   url_launcher: ^6.3.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
