--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_map: ^8.2.1
   url_launcher: ^6.3.2
   flutter_rating_bar: ^4.0.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
