--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   dotted_border: ^2.1.0
   onesignal_flutter: ^5.3.4
+  cloud_firestore: ^6.0.0
+  firebase_auth: ^6.0.1
+  firebase_core: ^4.0.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
