--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^6.0.1
   firebase_core: ^4.0.0
   http_parser: ^4.1.2
+  extended_image: ^10.0.1
 
 dev_dependencies:
   flutter_test:
