--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core: ^4.0.0
   http_parser: ^4.1.2
   extended_image: ^10.0.1
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
