--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   http_parser: ^4.1.2
   extended_image: ^10.0.1
   latlong2: ^0.9.1
+  connectivity_plus: ^6.1.5
 
 dev_dependencies:
   flutter_test:
