--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,13 +81,17 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/
+     - assets/logos/
 
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: assets/appLogo.png
+#  image_path: assets/appLogo.png
+  image_path: assets/logos/t3.png
   remove_alpha_ios: true
   min_sdk_android: 23
+  adaptive_icon_background: assets/logos/ttt.png
+#  adaptive_icon_foreground: assets/logos/t3.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
