--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   latlong2: ^0.9.1
   connectivity_plus: ^6.1.5
   fluttertoast: ^8.2.12
+  flutter_pdfview: ^1.3.2
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +84,7 @@ flutter:
   assets:
      - assets/
      - assets/logos/
+     - assets/docs/
 
 
 
