--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   fluttertoast: ^8.2.12
   flutter_pdfview: ^1.3.2
   path_provider: ^2.1.4
+  flutter_image_compress: ^2.4.0
 
 dev_dependencies:
   flutter_test:
