--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -39,6 +39,10 @@
 	<string>We need your location to show your current address</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We need your location to show your current address</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to camera to take photos for chat messages</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photo library to select images for chat messages</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
