--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_pdfview: ^1.3.2
   path_provider: ^2.1.4
   flutter_image_compress: ^2.4.0
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
