--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -6,6 +6,10 @@
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+
+	<key>NSContactsUsageDescription</key>
+    <string>Your phone number is required to contact suppliers or mechanics for orders or AAA service requests.</string>
+
 	<key>CFBundleDisplayName</key>
 	<string>Fixcars</string>
 	<key>CFBundleExecutable</key>
@@ -35,10 +39,11 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>We need your location to show your current address</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We need your location to show your current address</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Your location is required to find nearby mechanics and provide AAA (towing) services when requested.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Your location is required to find nearby mechanics and provide AAA (towing) services when requested.</string>
+
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs access to camera to take photos for chat messages</string>
 	<key>NSPhotoLibraryUsageDescription</key>
