add profile deleteing feat

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   path_provider: ^2.1.4
   flutter_image_compress: ^2.4.0
   mime: ^1.0.5
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
