--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   mime: ^1.0.5
   flutter_animate: ^4.5.2
   showcaseview: ^5.0.1
+  device_info_plus: ^12.3.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
