--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   showcaseview: ^5.0.1
   device_info_plus: ^12.3.0
   package_info_plus: ^8.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
