--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   device_info_plus: ^12.3.0
   package_info_plus: ^8.0.0
   intl: ^0.20.2
+  file_picker: ^10.3.8
 
 dev_dependencies:
   flutter_test:
