--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   package_info_plus: ^8.0.0
   intl: ^0.20.2
   file_picker: ^10.3.8
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
