--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   intl: ^0.20.2
   file_picker: ^10.3.8
   webview_flutter: ^4.13.0
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
